# interview-coach

./: .env  .gitignore  main.py  pyproject.toml  tts.ipynb
src/: interview.py  settings.py  speech.py  speech_to_text.py  text_to_speech.py  utils.py
src/application/: interview.py  speech_to_text.py  text_to_speech.py  workflow.py
src/domain/: models.py
src/infrastructure/: api.py
